Fixing css layout issues

--- a/media/assets/css/app4.css
+++ b/media/assets/css/app4.css
@@ -93,17 +93,18 @@ p {
     text-align: center;
     text-decoration: none;
     font-family: 'Arvo', serif;
-    font-size: 24px;
+    font-size: 36px;
     text-transform: lowercase;
     font-weight: bold;
     color: #fff;
-    background-color: #8E57C5;
-    width: 300px;
-    line-height: 36px;
+    background-color: #1f1f1f;
+    opacity: 0.7;
+    line-height: 115px;
 
     border: 2px solid rgba(0,0,0,0);
 
     margin: 0px auto;
+    height: 90px;
 
     -webkit-transition: all .150s ease-out;
        -moz-transition: all .150s ease-out;
@@ -112,7 +113,8 @@ p {
 }
 .squarebuttons:hover {
     border: 2px solid #fff;
-    background-color: #6EA4D3;
+    background-color: #1f1f1f;
+    opacity: 0.95;
 }
 
 .iconbutton {
@@ -210,7 +212,7 @@ p {
 
 #overlay {
     width: 100%;
-    height: 600px;
+    height: 100%;
     position: fixed;
     z-index: 1000;
     overflow: hidden;
@@ -219,9 +221,9 @@ p {
 }
 
 .infoscreen {
-    margin: 0 auto;
-    width: 600px;
-    height: 600px;
+    margin: 15% auto;
+    width: 100%;
+    height: 100%;
     
     /* starts hidden*/
     display: none;
@@ -280,7 +282,8 @@ p {
 
 #photo-submit {
     width: 300px;
-    height: 450px;
+    height: 300px;
+    cursor: pointer;
     border: 2px dashed #fff;
     text-align: center;
     font-weight: bold;
@@ -325,6 +328,7 @@ p {
     height: 52px;
     width: 100%;
     top: 0px;
+    right: 15px;
     z-index: 1010;
     display: none;
 }
@@ -357,17 +361,17 @@ p {
 
 
 #viewport {
-    width:100%;
-     height: 100%;
-     position:relative;
-     overflow: scroll;
-     overflow-x: hidden;
-     
-     margin:0 auto;
-     background:#212121;
-     
-     background-image: url(../img/broken_noise.png);
-     background-repeat: repeat;
+   width:100%;
+   height: 100%;
+   position:relative;
+   overflow: scroll;
+   overflow-x: hidden;
+   
+   margin:0 auto;
+   background:#212121;
+   
+   background-image: url(../img/broken_noise.png);
+   background-repeat: repeat;
 }
 
 
@@ -386,6 +390,7 @@ p {
 }
 
 .wall-item:hover{
+
 }
 
 .wall-item img {
